src/snapshots/smithereens__parser__tests__peptide-2.snap
---
source: src/parser.rs
assertion_line: 242
expression: "peptide(\"E\")?"
---
(
    "",
    [
        (
            'E',
            None,
            None,
        ),
    ],
)
