src/snapshots/smithereens__parser__tests__peptide-3.snap
---
source: src/parser.rs
assertion_line: 244
expression: "peptide(\"AEJA\")?"
---
(
    "",
    [
        (
            'A',
            None,
            None,
        ),
        (
            'E',
            None,
            None,
        ),
        (
            'J',
            None,
            None,
        ),
        (
            'A',
            None,
            None,
        ),
    ],
)
