src/snapshots/smithereens__parser__tests__peptide-4.snap
---
source: src/parser.rs
assertion_line: 257
expression: "peptide(\"AEJ(+Am)\")?"
---
(
    "",
    [
        (
            'A',
            None,
            None,
        ),
        (
            'E',
            None,
            None,
        ),
        (
            'J',
            Some(
                [
                    Add(
                        "Am",
                    ),
                ],
            ),
            None,
        ),
    ],
)
