src/snapshots/smithereens__parser__tests__peptide-5.snap
---
source: src/parser.rs
assertion_line: 269
expression: "peptide(\"A(+Am)E(-Ac)\")?"
---
(
    "",
    [
        (
            'A',
            Some(
                [
                    Add(
                        "Am",
                    ),
                ],
            ),
            None,
        ),
        (
            'E',
            Some(
                [
                    Remove(
                        "Ac",
                    ),
                ],
            ),
            None,
        ),
    ],
)
