src/snapshots/smithereens__parser__tests__peptide-6.snap
---
source: src/parser.rs
assertion_line: 284
expression: "peptide(\"AE(-Ac,+Am)\")?"
---
(
    "",
    [
        (
            'A',
            None,
            None,
        ),
        (
            'E',
            Some(
                [
                    Remove(
                        "Ac",
                    ),
                    Add(
                        "Am",
                    ),
                ],
            ),
            None,
        ),
    ],
)
