src/snapshots/smithereens__parser__tests__peptide-7.snap
---
source: src/parser.rs
assertion_line: 302
expression: "peptide(\"AQK[AA]AA\")?"
---
(
    "",
    [
        (
            'A',
            None,
            None,
        ),
        (
            'Q',
            None,
            None,
        ),
        (
            'K',
            None,
            Some(
                [
                    (
                        'A',
                        None,
                    ),
                    (
                        'A',
                        None,
                    ),
                ],
            ),
        ),
        (
            'A',
            None,
            None,
        ),
        (
            'A',
            None,
            None,
        ),
    ],
)
