src/snapshots/smithereens__parser__tests__peptide-8.snap
---
source: src/parser.rs
assertion_line: 316
expression: "peptide(\"AQK(-H)[AA(+Am)]AA\")?"
---
(
    "",
    [
        (
            'A',
            None,
            None,
        ),
        (
            'Q',
            None,
            None,
        ),
        (
            'K',
            Some(
                [
                    Remove(
                        "H",
                    ),
                ],
            ),
            Some(
                [
                    (
                        'A',
                        None,
                    ),
                    (
                        'A',
                        Some(
                            [
                                Add(
                                    "Am",
                                ),
                            ],
                        ),
                    ),
                ],
            ),
        ),
        (
            'A',
            None,
            None,
        ),
        (
            'A',
            None,
            None,
        ),
    ],
)
