src/snapshots/smithereens__parser__tests__peptide.snap
---
source: src/parser.rs
assertion_line: 240
expression: "peptide(\"A\")?"
---
(
    "",
    [
        (
            'A',
            None,
            None,
        ),
    ],
)
